tests/expectations/compiler/libraries/lib_struct_non_const_arg_fail.out
Error [ECMP0376012]: Unable to resolve composite expression `foo_lib::Foo`. A non-const expression was provided where a const generic parameter is required.
    --> compiler-test:5:51
     |
   5 |         let f: foo_lib::Foo::[n] = foo_lib::Foo::[n] { x: 0u32 };
     |                                                   ^
Error [ECMP0376012]: Unable to resolve composite type `foo_lib::Foo`. A non-const expression was provided where a const generic parameter is required.
    --> compiler-test:5:31
     |
   5 |         let f: foo_lib::Foo::[n] = foo_lib::Foo::[n] { x: 0u32 };
     |                               ^
